# ttc2018liveContest

./: .gitignore  README.md
solutions/EMFSolutionAOF/: solution.ini
solutions/EMFSolutionATL-Incremental/: solution.ini
solutions/EMFSolutionViatra/: solution.ini
solutions/EMFSolutionYAMTL/: solution.ini
solutions/EMFSolutionYAMTL_batch/: solution.ini
solutions/Hawk/org.hawk.ttc2018/: Hawk TTC2018 (batch, size 1, query 1).launch  Hawk TTC2018 (incremental update query, size 1, query 1) (1).launch  Hawk TTC2018 (incremental update, size 1, query 1).launch  pom.xml
solutions/Neo4jSolution/: solution.ini
solutions/Neo4jSolutionBatch/: solution.ini
solutions/Neo4jSolutionBatch_algo_with_filtered_edges/: solution.ini
solutions/Neo4jSolution_explicit_component/: solution.ini
solutions/SQLSolution/: solution.ini
solutions/SQLSolutionBatch/: solution.ini
solutions/differential-datalog/: .gitignore  solution.ini
solutions/differential-datalog/snq1/: run.sh  snq1.dl
solutions/differential-datalog/snq1/snq1_lib/: Cargo.toml
solutions/differential-datalog/snq1/snq1_lib/src/: main.rs
solutions/differential-datalog/snq2/: run.sh  snq2.dl  snq2.rs
solutions/differential-datalog/snq2/snq2_lib/: Cargo.toml
solutions/differential-datalog/snq2/snq2_lib/src/: main.rs
solutions/differential-formula/: Cargo.toml  solution.ini
solutions/differential-formula/src/: SocialNetwork.4ml  main.rs
