[package]
name = "differential-formula"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
# differential-formula = "0.1.1"
# Link to local crate for debugging.
differential-formula = { path = "../../../differential-formula"}